--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NK-BOT",
+  "name": "Kasumigaoka-BOT",
   "version": "3.0.0",
   "description": "Sexy Quien lo lea 7w7",
   "main": "nkbot.js",
